feat: add parameter to shorten API endpoint and update Swagger documentation
- Add a parameter to the `shorten` API endpoint for the `request` body
- Add a new definition for `endpoints.CreateShortURLRequest`
- Modify the `swagger.json` and `swagger.yaml` files to include the new parameter and definition
- Add a new function `decodePostURLRequest` to handle decoding the `request` body in the `api.go` file
