# adapter/shortenurl/api/docs/swagger.json
@@ -54,6 +54,17 @@
                     "shorten"
                 ],
                 "summary": "Shorten a URL",
+                "parameters": [
+                    {
+                        "description": "shorten url request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/endpoints.CreateShortURLRequest"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -66,6 +77,14 @@
         }
     },
     "definitions": {
+        "endpoints.CreateShortURLRequest": {
+            "type": "object",
+            "properties": {
+                "url": {
+                    "type": "string"
+                }
+            }
+        },
         "response.Response": {
             "type": "object",
             "properties": {
